# snowman

./: .gitignore  README.asciidoc  appveyor.yml
modules/: Findx64dbg.cmake
src/: CMakeLists.txt
src/nc/arch/x86/: X86InstructionAnalyzer.cpp
src/nc/core/ir/cgen/: CodeGenerator.cpp  DefinitionGenerator.cpp
src/nc/core/likec/: TreePrinter.cpp  Types.cpp  Types.h
src/nc/gui/: Colors.h  CppSyntaxHighlighter.cpp  CppSyntaxHighlighter.h  CxxDocument.cpp  CxxDocument.h  CxxView.cpp  CxxView.h  DisassemblyDialog.cpp  InspectorView.cpp  InstructionsView.cpp  LogView.cpp  MainWindow.cpp  SectionsView.cpp  SymbolsView.cpp
src/x64dbg-module/: CMakeLists.txt  QtPlugin.cpp  QtPlugin.h  SnowmanView.cpp  SnowmanView.h  pluginmain.cpp  pluginmain.h  x64dbg-module.qrc
